--- a/config/config.json
+++ b/config/config.json
@@ -1,3 +1,4 @@
+
 {
   "development": {
     "username": "root",
@@ -14,10 +15,10 @@
     "dialect": "mysql"
   },
   "production": {
-    "username": "root",
-    "password": null,
-    "database": "database_production",
-    "host": "127.0.0.1",
+    "username": "b021e8d008e51e",
+    "password": "5f435de7",
+    "database": "heroku_5fb2135de2b5866",
+    "host": "us-cdbr-east-04.cleardb.com",
     "dialect": "mysql"
   }
 }
