--- a/config/config.json
+++ b/config/config.json
@@ -15,9 +15,9 @@
     "dialect": "mysql"
   },
   "production": {
-    "username": "b021e8d008e51e",
-    "password": "5f435de7",
-    "database": "heroku_5fb2135de2b5866",
+    "username": "ba3d2e7e9cff97",
+    "password": "348ed759",
+    "database": "heroku_d8b512d37bc4856",
     "host": "us-cdbr-east-04.cleardb.com",
     "dialect": "mysql"
   }
